Closed Bug 558952 Opened 15 years ago Closed 15 years ago

JIT can call toVTable in instr.cpp directly instead of via class Toplevel

Categories

(Tamarin Graveyard :: Baseline JIT (CodegenLIR), defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Future

People

(Reporter: edwsmith, Assigned: edwsmith)

References

Details

Attachments

(1 file)

Thus eliminating one level of indirection and eliminating the last call site of TOPLEVELADDR in the jit.
Blocks: 537926
Also removed the dead CLASSCLOSUREADDR macro and helper function.
Assignee: nobody → edwsmith
Status: NEW → ASSIGNED
Attachment #438630 - Flags: review?(kpalacz)
Target Milestone: --- → Future
Attachment #438630 - Flags: review?(kpalacz) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: