Call avmplus::toVTable directly instead of via Toplevel::toVTable (bug 558952 r=kpalacz+)

Also removed the dead CLASSCLOSUREADDR macro and helper function.